# webinar-notes

./: .env.example  AGENTS.md  CODE_GUIDELINES.md  README.md  alembic.ini  main.py  pyproject.toml
.agents/skills/alembic-migration-guard/: SKILL.md
.agents/skills/api-test-authoring/: SKILL.md
.agents/skills/fastapi-backend-dev/: SKILL.md
alembic/: env.py
alembic/versions/: 0613c410fe2b_migrate_password_to_hashed.py  274c9b7dd915_migrate_note_category_to_relation.py  6150ec2519df_init.py
app/: app.py
app/api/: router.py
app/api/routes/: auth.py  categories.py  notes.py
app/core/: config.py  logger.py  security.py
app/core/utils/: __init__.py
app/db/: session.py
app/db/seeds/: __init__.py  categories.py
app/models/: __init__.py  category.py  note.py  user.py
app/schemas/: __init__.py  auth.py  category.py  note.py
scripts/: __init__.py  seed_categories.py
tests/: test_main_happy_path.py
