[project]
name = "notes-backend"
version = "0.1.0"
description = "FastAPI notes backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "sqlalchemy==2.0.36",
  "psycopg2-binary==2.9.10",
  "passlib[bcrypt]==1.7.4",
  "PyJWT==2.10.1",
  "pydantic==2.10.3",
  "email-validator==2.2.0",
  "alembic>=1.18.4",
]
